--- a/Dockerfile-heroku
+++ b/Dockerfile-heroku
@@ -1,8 +1,8 @@
 FROM python:3.9
-EXPOSE 8080
+EXPOSE 8501
 WORKDIR /app
 COPY . .
 COPY requirements-deploy.txt ./requirements-deploy.txt
 RUN pip3 install -r requirements-deploy.txt
 COPY . .
-CMD streamlit run app.py --server.port 8080
+CMD streamlit run app.py --server.port $PORT
