--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -5,7 +5,27 @@ on:
     branches:
       - main
 jobs:
-  build:
+  build_backend:
+    steps:
+        - uses: actions/checkout@v2
+        - uses: akhileshns/heroku-deploy@v3.12.12 
+          with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: ${{ secrets.HEROKU_APP_NAME }} 
+            heroku_email: ${{ secrets.HEROKU_EMAIL }} 
+            usedocker: true
+            docker_heroku_process_type: "worker"
+            appdir: "api"
+            docker_build_args: |
+              BOT_READER_TOKEN
+              BOT_SENDER_TOKEN
+              CHANNEL_ID
+            env:
+              BOT_READER_TOKEN: ${{ secrets.BOT_READER_TOKEN }}
+              BOT_SENDER_TOKEN: ${{ secrets.BOT_SENDER_TOKEN }}
+              CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
+
+  build_frontend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
