--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -6,6 +6,7 @@ on:
       - main
 jobs:
   build_backend:
+    runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
         - uses: akhileshns/heroku-deploy@v3.12.12 
