--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,12 +1,12 @@
-ARG BOT_READER_TOKEN
-ARG BOT_SENDER_TOKEN
-ARG CHANNEL_ID
 
 FROM python:3.9-alpine
 
-ENV BOT_READER_TOKEN=$BOT_READER_TOKEN
-ENV BOT_SENDER_TOKEN=$BOT_SENDER_TOKEN
-ENV CHANNEL_ID=$CHANNEL_ID
+ARG BOT_READER_TOKEN_ARG
+ENV BOT_READER_TOKEN=$BOT_READER_TOKEN_ARG
+ARG BOT_SENDER_TOKEN_ARG
+ENV BOT_SENDER_TOKEN=$BOT_SENDER_TOKEN_ARG
+ARG CHANNEL_ID_ARG
+ENV CHANNEL_ID=$CHANNEL_ID_ARG
 
 COPY requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
