Improve API for storing data

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,7 @@
-
 FROM python:3.9-alpine
 
+# used for receiving the env variables through github actions
+# for local development use "--env-file=env"
 ARG BOT_READER_TOKEN_ARG
 ENV BOT_READER_TOKEN=$BOT_READER_TOKEN_ARG
 ARG BOT_SENDER_TOKEN_ARG
