--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,3 +1,4 @@
+# Dockerfile used for the CI/CD-GitHub-Actions-Pipeline to push to heroku
 FROM python:3.9-slim
 EXPOSE 8501
 COPY requirements.txt ./requirements.txt
