--- a/training/Dockerfile
+++ b/training/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9-slim
 
 COPY requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
-RUN apt-get update && apt-get install -y git
+RUN apt-get update && apt-get install -y git curl
 
 RUN mkdir /training
 ADD *.py /training/
