--- a/training/Dockerfile
+++ b/training/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y git curl
 
 RUN mkdir /training
 ADD *.py /training/
-ADD train_and_push.sh /training/
+ADD train_and_commit.sh /training/
 
 RUN chmod +x training/*.py
 
